[package]
name = "lib60870-sys"
version = "2.3.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
libc = "0.2.153"
thiserror = "1.0.57"

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
